wip: npm i electron-packager --save-dev"

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron:serve": "concurrently -k \"cross-env BROWSER=none npm start\" \"npm run electron:start\"",
-    "electron:build": "electron-packager . USAProFile",
-    "electron:start": "electron ."
+    "electron:build": "npm run build && electron-builder - c.extraMetadata.main=build/main.js",
+    "electron:start": "wait-on tcp:3000 && electron ."
   },
   "eslintConfig": {
     "extends": [
