--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@testing-library/user-event": "^13.5.0",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
-    "electron": "^25.2.0",
     "firebase": "^9.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,7 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron:serve": "concurrently -k \"cross-env BROWSER=none npm start\" \"npm run electron:start\"",
-    "electron:build": "npm run build && electron-builder - c.extraMetadata.main=build/main.js",
+    "electron:build": "electron-packager . USAProFile --platform=darwin,win32,linux --arch=x64",
     "electron:start": "wait-on tcp:3000 && electron ."
   },
   "eslintConfig": {
@@ -54,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "electron": "^25.2.0",
     "electron-packager": "^17.1.1"
   }
 }
